# shoppinkki

./: .env  .gitignore  .gitmodules  .rmf_schedule_node.yaml  CLAUDE.md  README.md  cheatsheet.md  docker-compose.yml  environment-ai.yml  environment.yml  requirements-ai.txt  requirements.txt  robot.requirements.txt
docs/: admin_ui.md  interface_specification.md  rmf_fleet_adapter.md  run.md  scaffold_plan.md  setup.md  state_machine.md  system_architecture.md  system_requirements.md  system_requirements_checklist.html  user_requirements.md
docs/scenarios/: scenario_01.md  scenario_13.md  scenario_14.md  scenario_17.md
pinky_offload_vision/: package.xml  setup.cfg  setup.py
pinky_offload_vision/launch/: offload.launch.py
pinky_offload_vision/pinky_offload_vision/: server_tracker.py  web_viewer.py
pinky_vision_streamer/: package.xml  setup.cfg  setup.py
pinky_vision_streamer/pinky_vision_streamer/: camera_publisher.py  motor_controller.py
presentation/js/: main.js
scratch/: integrated_test.py  test_ai_logic.py  total_check.py
scripts/: .zshrc.pinky  _ros_env.sh  fastdds_unicast.xml  generate_product_qr.py  gz_init_robots.sh  index.md  rmf_dispatch.py  run_admin.sh  run_ai.sh  run_customer_web.sh  run_gazebo_test.sh  run_robot.sh  run_server.sh  run_sim.sh  run_ui.sh  seed.sh  test_nav.sh  visualize_nav_graph.py
scripts/db/: README.md  (+4 more)
src/control_center/admin_app/: package.xml  setup.cfg  setup.py
src/control_center/admin_app/admin_app/: app_bridge.py  main.py  main_window.py
src/control_center/admin_app/admin_app/widgets/: alarm_panel.py  event_log_panel.py  map_view.py  robot_panel.py
src/control_center/admin_app/test/: test_app_bridge.py
src/control_center/shoppinkki_rmf/: package.xml  setup.cfg  setup.py
src/control_center/shoppinkki_rmf/config/: fleet_config.yaml
src/control_center/shoppinkki_rmf/launch/: rmf_fleet.launch.py
src/control_center/shoppinkki_rmf/maps/: shop.building.yaml  shop_nav_graph.yaml
src/control_center/shoppinkki_rmf/shoppinkki_rmf/: __init__.py  fleet_adapter.py  robot_command_handle.py  status_bridge.py  task_dispatcher.py
src/control_center/shoppinkki_rmf/test/: test_robot_command_handle.py
src/shoppinkki/shoppinkki_nav/: package.xml  setup.cfg  setup.py
src/shoppinkki/shoppinkki_nav/config/: bridge_robot_18.yaml  bridge_robot_54.yaml  keepout_mask.yaml  nav2_params.yaml  nav2_params_robot_18.yaml  nav2_params_robot_54.yaml
src/shoppinkki/shoppinkki_nav/launch/: gz_multi_robot.launch.py  navigation.launch.py
src/shoppinkki/shoppinkki_nav/maps/: shop.pgm  shop.yaml
src/shoppinkki/shoppinkki_nav/rviz/: multi_robot_view.rviz
src/shoppinkki/shoppinkki_nav/scripts/: xacro_patch.sh
src/shoppinkki/shoppinkki_nav/shoppinkki_nav/: __init__.py  boundary_monitor.py  bt_guiding.py  bt_returning.py  bt_searching.py  bt_tracking.py  bt_waiting.py  nav2_client.py
src/shoppinkki/shoppinkki_nav/test/: test_boundary_monitor.py  test_bt_searching.py
(+197 files in other folders)
